PathsGames v0.33.3 Fix Neighbor direction and costs and map
